--- a/mingw-w64-luajit/PKGBUILD
+++ b/mingw-w64-luajit/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=luajit
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=2.0.5
+pkgver=2.1.0_beta3
 pkgrel=1
 _sourcedir=${_realname}-${pkgver}
 pkgdesc="Just-in-time compiler and drop-in replacement for Lua 5.1 (mingw-w64)"
@@ -19,10 +19,10 @@ replaces=("${MINGW_PACKAGE_PREFIX}-lua51"
           "${MINGW_PACKAGE_PREFIX}-luajit-git")
 makedepends=("${MINGW_PACKAGE_PREFIX}-gcc")
 options=('strip' 'staticlibs')
-source=("https://luajit.org/download/LuaJIT-${pkgver}.tar.gz"
+source=("https://luajit.org/download/LuaJIT-2.1.0-beta3.tar.gz"
         001-make-import-library.patch
         002-fix-pkg-config-file.patch)
-sha256sums=('874b1f8297c697821f561f9b73b57ffd419ed8f4278c82e05b48806d30c1e979'
+sha256sums=('1ad2e34b111c802f9d0cdf019e986909123237a28c746b21295b63c9e785d9c3'
             '53ae9e09c524b9dfb3c9e918204b84c23ec45f352fa64a39cbb26c27699ecd89'
             '4df486e82b0bbeead01dcf6001e90c51477a3a8ac18611d60d7067f2c7013428')
 
